fix(tiptap): align preview with result display

--- a/nuxt/assets/css/main.css
+++ b/nuxt/assets/css/main.css
@@ -89,6 +89,4 @@
 
 .ProseMirror { /* stylelint-disable-line selector-class-pattern */
   @apply maevsi-prose;
-
-  max-width: none;
 }
